SDK/fixtures/invalid/invalid-energy.tps
## [Test]

### [Body]

[energy:15]Too high.[/energy]
